Web+: Use reference for urlcontext in app and window

It needs to be deleted after everything is done.
This seems to fix the crashes I could reproduce on exit in my VM.
So might fix #17583.
(WebView also has fContext, but I assume they are part of a window)

Change-Id: I0125f76b0b2331ac3b6a81d6c20087ebdedbf2f2
Reviewed-on: https://review.haiku-os.org/c/haiku/+/5486
Reviewed-by: Fredrik Holmqvist <fredrik.holmqvist@gmail.com>
Reviewed-by: Adrien Destugues <pulkomandy@pulkomandy.tk>
Tested-by: Commit checker robot <no-reply+buildbot@haiku-os.org>